# ariel

./: .gitignore  ARCHITECTURE_PLAN.md  CODE_REVIEW.md  README.md  opencode.json  pyproject.toml  start-review-session.ps1
.opencode/agents/: review.md
.opencode/prompts/: build.md
.opencode/skills/code-review/: SKILL.md
.opencode/tools/: review-diff.ts
ariel/: __init__.py  bot.py
ariel/plugins/Core/: BiliApi.py  ariel_bili.py  ariel_cmd.py  ariel_cookie.py  ariel_database.py  ariel_rule.py  ariel_tools.py
arielbot/: __init__.py  bot.py
arielbot/application/: auth_service.py  bot_status_service.py  query_service.py  subscription_service.py
arielbot/application/push/: check_jobs.py  handlers.py
arielbot/domain/: entities.py  events.py
arielbot/domain/interfaces/: api.py  bot_client.py  event_bus.py  renderer.py  repository.py
arielbot/infrastructure/: container.py  database.py  event_bus.py
arielbot/infrastructure/adapters/: bili_api.py  bili_auth.py  bili_cookie_utils.py  bili_wbi.py  bot_client.py  renderer.py
arielbot/infrastructure/repositories/: bot_repository.py  cookie_repository.py  dyn_repository.py  sub_repository.py  target_repository.py
arielbot/plugins/Core/: __init__.py  ariel_cmd.py  ariel_database.py  ariel_push.py  ariel_tools.py
arielbot/presentation/: message_utils.py
arielbot/presentation/commands/: auth_commands.py  query_commands.py  registry.py  sub_commands.py
arielbot/presentation/middleware/: __init__.py
arielbot/presentation/scheduler/: __init__.py
docs/: 学习笔记.md
tests/: __init__.py
tests/test_application/: test_auth_service.py  test_bot_status_service.py  test_query_service.py  test_subscription_service.py
tests/test_domain/: test_entities.py  test_events.py
tests/test_infrastructure/: test_event_bus.py
tests/test_presentation/: test_middleware.py
(+4 files in other folders)
