[project]
name = "ariel"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Polyisoprene", email = "lzxder@outlook.com"},
]
dependencies = [
    "nonebot2>=2.3.1",
    "httpx>=0.27.0",
    "dynrender-skia>=0.2.7",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
