[tool.poetry]
name = "ariel"
version = "0.1.0"
description = ""
authors = ["Polyisoprene <lzxder@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nonebot2 = "^2.3.1"
click = "^8.1.7"
nonebot-adapter-onebot = "^2.4.3"
fastapi = "^0.111.0"

[tool.poetry.group.dev.dependencies]

[tool.poetry.scripts]
ariel = "ariel.__init__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
