[tool.poetry]
name = "arielBot"
version = "0.7.0"
description = ""
authors = ["Polyisoprene <lzxder@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nonebot2 = "^2.3.1"
click = "^8.1.7"
nonebot-adapter-onebot = "^2.4.3"
fastapi = "^0.111.0"
aiosqlite = "^0.21.0"
pycryptodome = "^3.21.0"
qrcode = "^8.0"
pypng = "^0.20220715.0"
dynrender-skia = "^0.3.0"
nonebot-plugin-apscheduler = "^0.5.0"
python-dotenv = "^1.0"
dynamicadaptor = "^0.5.5"

[tool.poetry.group.dev.dependencies]
nb-cli = "^1.7.2"
nonebot2 = ">=2.4.4"
nonebot-adapter-onebot = "^2.4.6"
pytest = "^8.0"
pytest-asyncio = "^0.23"
pydantic-core = "^2.47.0"

[tool.poetry.scripts]
ariel = "arielbot.__init__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
